src/test/ui/impl-duplicate-methods.stderr
error[E0201]: duplicate definitions with name `orange`:
  --> $DIR/impl-duplicate-methods.rs:15:5
   |
14 |     fn orange(&self) {}
   |     ------------------- previous definition of `orange` here
15 |     fn orange(&self) {}
   |     ^^^^^^^^^^^^^^^^^^^ duplicate definition

error: aborting due to previous error

